# NutriSense

./: Dockerfile  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci-cd.yaml
app/: config.py
app/api/v1/: endpoints.py
app/services/: document_loader.py  question_answering.py  vector_store.py
app/static/: style.css
app/templates/: index.html
scripts/: init_pinecone.py  populate_db.py
