[tool.poetry]
name = "nutrisense"
version = "0.1.0"
description = ""
authors = ["A Noroozi <aliasghar.noroozi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-dotenv = "^1.0.1"
langchain = "^0.3.4"
langchain-openai = "^0.2.3"
langchain-community = "^0.3.3"
pypdf = "^5.0.1"
pinecone = {extras = ["grpc"], version = "^5.3.1"}
langchain-pinecone = "^0.2.0"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
